RESOLVED FIXED112828
[skia] feConvolveMatrix should use accelerated path
https://bugs.webkit.org/show_bug.cgi?id=112828
Summary [skia] feConvolveMatrix should use accelerated path
Stephen White
Reported 2013-03-20 12:44:41 PDT
[skia] feConvolveMatrix should use accelerated path
Attachments
Patch (9.54 KB, patch)
2013-03-20 12:58 PDT, Stephen White
no flags
Fix copyright date (9.54 KB, patch)
2013-03-20 13:01 PDT, Stephen White
no flags
Patch (9.55 KB, patch)
2013-03-20 13:28 PDT, Stephen White
no flags
Patch for landing (9.56 KB, patch)
2013-03-21 04:54 PDT, Stephen White
no flags
Patch for landing (9.60 KB, patch)
2013-03-21 06:32 PDT, Stephen White
no flags
Patch for landing (9.60 KB, patch)
2013-03-21 06:37 PDT, Stephen White
no flags
Stephen White
Comment 1 2013-03-20 12:58:54 PDT
Stephen White
Comment 2 2013-03-20 13:01:50 PDT
Created attachment 194100 [details] Fix copyright date
Stephen White
Comment 3 2013-03-20 13:28:10 PDT
Stephen White
Comment 4 2013-03-20 15:16:22 PDT
James, would you mind taking a look?
James Robinson
Comment 5 2013-03-20 21:27:29 PDT
Comment on attachment 194105 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=194105&action=review Hm, ok. I don't think I understand this very well but seems reasonable. > Source/WebCore/platform/graphics/filters/skia/FEConvolveMatrixSkia.cpp:43 > + case WebCore::EDGEMODE_UNKNOWN: > + case WebCore::EDGEMODE_DUPLICATE: > + default: > + return SkMatrixConvolutionImageFilter::kClamp_TileMode; this looks weird. why not do switch () { case ..._WRAP: return ...; case ..._NONE: return ...; default: return ....; } ?
Stephen White
Comment 6 2013-03-21 04:50:46 PDT
Comment on attachment 194105 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=194105&action=review >> Source/WebCore/platform/graphics/filters/skia/FEConvolveMatrixSkia.cpp:43 >> + return SkMatrixConvolutionImageFilter::kClamp_TileMode; > > this looks weird. why not do > > switch () { > case ..._WRAP: > return ...; > case ..._NONE: > return ...; > default: > return ....; > } > > ? I'd prefer to call out the DUPLICATE edge mode explicitly, since this one is the one that really maps to Clamp. I'll remove the default case entirely, since it shouldn't be necessary. UNKNOWN is a weird one, that's not in the spec (perhaps just there as a placeholder for parsing?) but unfortunately I still seed to do something with it.
Stephen White
Comment 7 2013-03-21 04:54:24 PDT
Created attachment 194228 [details] Patch for landing
WebKit Review Bot
Comment 8 2013-03-21 05:18:58 PDT
Comment on attachment 194228 [details] Patch for landing Clearing flags on attachment: 194228 Committed r146454: <http://trac.webkit.org/changeset/146454>
WebKit Review Bot
Comment 9 2013-03-21 05:19:02 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 10 2013-03-21 05:53:30 PDT
Re-opened since this is blocked by bug 112906
Stephen White
Comment 11 2013-03-21 06:32:58 PDT
Created attachment 194245 [details] Patch for landing
WebKit Review Bot
Comment 12 2013-03-21 06:35:49 PDT
Comment on attachment 194245 [details] Patch for landing Rejecting attachment 194245 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=webkit-commit-queue.appspot.com', '--bot-id=gce-cq-03', 'validate-changelog', '--non-interactive', 194245, '--port=chromium-xvfb']" exit_code: 1 cwd: /mnt/git/webkit-commit-queue /mnt/git/webkit-commit-queue/LayoutTests/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://webkit-commit-queue.appspot.com/results/17292022
Stephen White
Comment 13 2013-03-21 06:37:15 PDT
Created attachment 194246 [details] Patch for landing
WebKit Review Bot
Comment 14 2013-03-21 08:00:43 PDT
Comment on attachment 194246 [details] Patch for landing Clearing flags on attachment: 194246 Committed r146469: <http://trac.webkit.org/changeset/146469>
WebKit Review Bot
Comment 15 2013-03-21 08:00:47 PDT
All reviewed patches have been landed. Closing bug.
Ryosuke Niwa
Comment 16 2013-03-21 11:45:59 PDT
Why was this patch landed without any new expected results? Please rebaseline results for at least one platform in the patch. Otherwise we have no way of knowing what the expected results is.
Ryosuke Niwa
Comment 17 2013-03-21 13:13:15 PDT
Note You need to log in before you can comment on or make changes to this bug.