[skia] feConvolveMatrix should use accelerated path https://bugs.webkit.org/show_bug.cgi?id=112828

Reviewed by James Robinson.

Source/WebCore:

Covered by layout tests css3/filters/effect-reference*.html.

* WebCore.gypi:
Add FEConvolveMatrixSkia.cpp to the build.
* platform/graphics/filters/FEConvolveMatrix.h:
Enable the skia accelerated path for feConvolveMatrix.
* platform/graphics/filters/skia/FEConvolveMatrixSkia.cpp:
(WebCore::FEConvolveMatrix::createImageFilter):
Implement building/conversion from FEConvolveMatrix to
SkMatrixConvolutionImageFilter.

LayoutTests:

* css3/filters/effect-reference-hw.html:
* css3/filters/effect-reference.html:
Add new test case for feConvolveMatrix as a reference filter.
* platform/chromium/TestExpectations:
Suppress failures until the test can be rebaselined.


Canonical link: https://commits.webkit.org/131237@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@146454 268f45cc-cd09-0410-ab3c-d52691b4dbfc