Source/WebCore/platform/graphics/filters/FEConvolveMatrix.h
@@ -71,6 +71,9 @@ public:
     bool setPreserveAlpha(bool);
 
     virtual void platformApplySoftware();
+#if USE(SKIA)
+    virtual SkImageFilter* createImageFilter(SkiaImageFilterBuilder*);
+#endif
     virtual void dump();
 
     virtual void determineAbsolutePaintRect() { setAbsolutePaintRect(enclosingIntRect(maxEffectRect())); }
